...
import androidx.compose.material3.Text
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.stringResource

const val TEST_TAG_BOTTOM_BAR = "TEST_TAG_BOTTOM_BAR"
const val TEST_TAG_MENU_ITEM_PREFIX = "TEST_TAG_MENU_ITEM_"

/**
 * Composable function for the bottom bar navigation.
 *
 * @param onTabSelect Callback function when an icon is selected.
...
